// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`WithdrawForm - Feature flag enabled: wrapUnwrapNativeToken > lets the user partially withdraw directly to native tokens by unwrapping 1`] = `
[
  {
    "amountMantissa": "1000000000000000000",
    "poolComptrollerContractAddress": "0x94d1820b2d1c7c7452a163983dc888cec546b77d",
    "poolName": "Venus",
    "unwrap": true,
    "vToken": {
      "address": "0x6d6F697e34145Bb95c54E77482d97cc261Dc237E",
      "chainId": 97,
      "decimals": 8,
      "symbol": "vXVS",
      "underlyingToken": {
        "address": "0x700868CAbb60e90d77B6588ce072d9859ec8E281",
        "chainId": 97,
        "decimals": 18,
        "iconSrc": "fake-weth-asset",
        "symbol": "WETH",
        "tokenWrapped": {
          "address": "0x98f7A83361F7Ac8765CcEBAB1425da6b341958a7",
          "chainId": 97,
          "decimals": 18,
          "iconSrc": "fake-eth-asset",
          "isNative": true,
          "symbol": "ETH",
        },
      },
    },
    "withdrawFullSupply": false,
  },
]
`;

exports[`WithdrawForm - Feature flag enabled: wrapUnwrapNativeToken > lets the user withdraw all their tokens directly to native tokens by unwrapping 1`] = `
[
  {
    "amountMantissa": "10000000",
    "poolComptrollerContractAddress": "0x94d1820b2d1c7c7452a163983dc888cec546b77d",
    "poolName": "Venus",
    "unwrap": true,
    "vToken": {
      "address": "0x6d6F697e34145Bb95c54E77482d97cc261Dc237E",
      "chainId": 97,
      "decimals": 8,
      "symbol": "vXVS",
      "underlyingToken": {
        "address": "0x700868CAbb60e90d77B6588ce072d9859ec8E281",
        "chainId": 97,
        "decimals": 18,
        "iconSrc": "fake-weth-asset",
        "symbol": "WETH",
        "tokenWrapped": {
          "address": "0x98f7A83361F7Ac8765CcEBAB1425da6b341958a7",
          "chainId": 97,
          "decimals": 18,
          "iconSrc": "fake-eth-asset",
          "isNative": true,
          "symbol": "ETH",
        },
      },
    },
    "withdrawFullSupply": true,
  },
]
`;
